feat: add websocket endpoint, prometheus metrics and healthz, revamped skills for ai agents and bandwitdth throttling
